# goshawk-habitat-analysis

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
scripts/: main.py  main_03122026.py  main_2.py  rasters.py
src/goshawk_habitat/: __init__.py
src/goshawk_habitat/db/: oracle.py  oracly.py
src/goshawk_habitat/rast/: raster.py
src/goshawk_habitat/sql/: Foraging_Current_Fire.sql  Foraging_Historic_Fire.sql  Nesting_Consolidated_Cutblocks.sql  Nesting_Current_Fire.sql  Nesting_Historic_Fire.sql  TSA.sql  all_districts.sql  data_prep.sql  foraging.sql  foraging_2.sql  nesting.sql  optimized_foraging.sql  veg_comp_by_district.sql  veg_comp_by_tsa.sql
